--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-player": "^1.15.2",
     "react-reveal": "^1.2.2",
     "react-select": "^3.0.8",
+    "react-spinners": "^0.8.1",
     "react-spring": "^8.0.27",
     "react-sticky": "^6.0.3",
     "react-stickynode": "^2.1.1",
