--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie": "^0.4.0",
     "currency.js": "^1.2.2",
     "formik": "^2.1.2",
+    "fs": "^0.0.1-security",
     "graphql": "^14.5.8",
     "graphql-tag": "2.10.1",
     "isomorphic-unfetch": "^3.0.0",
@@ -42,6 +43,7 @@
     "react-fast-compare": "^2.0.4",
     "react-image": "^2.2.1",
     "react-intl": "^3.11.0",
+    "react-masonry-css": "^1.0.14",
     "react-multi-carousel": "^2.5.0",
     "react-player": "^1.15.2",
     "react-reveal": "^1.2.2",
