--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "react-device-detect": "^1.9.10",
     "react-dom": "^16.12.0",
     "react-fast-compare": "^2.0.4",
+    "react-google-login": "^5.1.2",
     "react-image": "^2.2.1",
     "react-intl": "^3.11.0",
     "react-masonry-css": "^1.0.14",
     "react-multi-carousel": "^2.5.0",
+    "react-player": "^1.15.3",
     "react-reveal": "^1.2.2",
     "react-select": "^3.0.8",
     "react-spinners": "^0.8.1",
