PROD 1.11.1 changes to the video playlist page

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apollo-cache-inmemory": "1.6.5",
     "apollo-client": "2.6.8",
     "apollo-link-http": "1.5.16",
+    "baseui": "^9.67.2",
     "cookie": "^0.4.0",
     "currency.js": "^1.2.2",
     "formik": "^2.1.2",
@@ -60,6 +61,7 @@
     "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.0.0",
     "styled-system": "^5.1.2",
+    "styletron-react": "^5.2.7",
     "stylis-plugin-rtl": "^1.0.0",
     "url": "^0.11.0",
     "uuid": "^3.3.3",
