--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-device-detect": "^1.9.10",
     "react-dom": "^16.12.0",
     "react-fast-compare": "^2.0.4",
+    "react-flexbox-grid": "^2.1.2",
     "react-google-login": "^5.1.2",
+    "react-hook-form": "^5.4.0",
     "react-image": "^2.2.1",
     "react-intl": "^3.11.0",
     "react-masonry-css": "^1.0.14",
@@ -61,6 +63,7 @@
     "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.0.0",
     "styled-system": "^5.1.2",
+    "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7",
     "stylis-plugin-rtl": "^1.0.0",
     "url": "^0.11.0",
