--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-cookies": "^2.0.2",
     "next-fonts": "^1.0.1",
     "next-optimized-images": "^2.5.4",
+    "nuka-carousel": "^4.6.7",
     "rc-collapse": "^1.11.8",
     "rc-drawer": "^3.0.2",
     "rc-table": "^7.0.0-rc.5",
@@ -48,7 +49,6 @@
     "react-image": "^2.2.1",
     "react-intl": "^3.11.0",
     "react-masonry-css": "^1.0.14",
-    "react-multi-carousel": "^2.5.0",
     "react-player": "^1.15.3",
     "react-reveal": "^1.2.2",
     "react-select": "^3.0.8",
