--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-device-detect": "^1.9.10",
     "react-dom": "^16.12.0",
     "react-fast-compare": "^2.0.4",
+    "react-ga": "^2.7.0",
     "react-google-login": "^5.1.2",
     "react-hook-form": "^5.4.0",
     "react-icons": "^3.9.0",
